--- a/views/homeLayout.twig
+++ b/views/homeLayout.twig
@@ -206,70 +206,10 @@
 			</section> -->
 
 		<!-- Footer -->
-			<div id="footer">
-				<div class="container">
-					<div class="row 200% uniform">
-						<section class="4u 12u$(medium) 12u$(small)">
-							<header class="major">
-								<h3>About</h3>
-							</header>
-							<p>Adipiscing orci felis. Blandit metus morbi. Adipiscing amet vis blandit. Vestibulum id ac enim nascetur ante adipiscing. Col vestibulum ac fusce lacinia nisi ante adipiscing amet ante tempus at faucibus. Adipiscing ante arcu nullam amet ante ac semper accumsan. Lacinia non integer ac praesent mi porttitor adipiscing vitae id praesent.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn more</a></li>
-							</ul>
-						</section>
-						<section class="4u 6u(medium) 12u$(small)">
-							<header class="major">
-								<h3>Recent News</h3>
-							</header>
-							<ul class="updates">
-								<li>
-									<p>
-										<a href="#">Lacinia enim cras vitae vis urna placerat ac blandit faucibus varius tempus. Interdum adipiscing lorem blandit. Curae interdum amet accumsan.</a>
-									</p>
-									<span class="timestamp">4 hours ago</span>
-								</li>
-								<li>
-									<p>
-										<a href="#">Interdum et aliquet aliquet enim vestibulum nibh. Odio turpis nunc quis a aliquet. Praesent lobortis in ac lobortis phasellus adipiscing praesent.</a>
-									</p>
-									<span class="timestamp">4 hours ago</span>
-								</li>
-							</ul>
-						</section>
-						<section class="4u$ 6u$(medium) 12u$(small)">
-							<header class="major">
-								<h3>Contact</h3>
-							</header>
-							<ul class="labeled-icons">
-								<li>
-									<h4 class="icon fa-envelope"><span class="label">Email</span></h4>
-									<a href="#">someone@untitled.tld</a>
-								</li>
-								<li>
-									<h4 class="icon fa-phone"><span class="label">Phone</span></h4>
-									(000) 000-0000 x12345
-								</li>
-								<li>
-									<h4 class="icon fa-home"><span class="label">Address</span></h4>
-									1234 Somewhere Road, Suite #543<br>Nashville, TN 00000
-								</li>
-								<li>
-									<h4 class="icon fa-twitter"><span class="label">Twitter</span></h4>
-									<a href="#">twitter.com/untitled</a>
-								</li>
-								<li>
-									<h4 class="icon fa-facebook"><span class="label">Facebook</span></h4>
-									<a href="#">facebook.com/untitled</a>
-								</li>
-							</ul>
-						</section>
-					</div>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. All rights reserved.
-				</div>
-			</div>
+			{% block footerContent %}
+			    
+			{% endblock %}
+			{#{{ include ('footerContent.twig') }}#}
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
