--- a/views/homeLayout.twig
+++ b/views/homeLayout.twig
@@ -159,7 +159,7 @@
 			<section id="three" class="wrapper style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>En bref sur le site</h2>
+						<h2>Accès rapide</h2>
 						<!-- <p>Convallis amet volutpat et aliquam</p> -->
 					</header>
 					<div class="icon-grid">
