correct bug on home page displaying

--- a/src/views/homeTemplate.twig
+++ b/src/views/homeTemplate.twig
@@ -1,9 +1,9 @@
-{% extends 'frontendLayout.twig' %}
+{% extends 'homeLayout.twig' %}
 
 
 {% block title %}
 
-	{{ parent() }} Accueil
+	 Accueil - {{ parent() }}
     
 {% endblock title%}
 
@@ -110,7 +110,7 @@
 
 			{% block caroussel %}
 
-			{% endblock caroussel%} 
+			{% endblock caroussel %} 
 			    
 			<!-- REMPLACER PAR LE BLOC TWIG
 			<article>
