--- a/src/views/frontendLayout.twig
+++ b/src/views/frontendLayout.twig
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{% block title %}JMD - {% endblock title%}</title>
+		<title>{% block title %} JMD {% endblock title%}</title>
 		<meta charset="utf-8">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 			<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 
+		{% block head %}
+		    
+		{% endblock head %}
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 			<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->	
+		
 
 			<!-- AJOUTER UNE META "DESCRIPTION" -->
 	</head>
@@ -17,10 +22,42 @@
 
 		<!-- Header -->
 
-			{% block header %}
-			    
-			{% endblock header%}
+		<div id="header">
+			<h1 id="logo"><a href="index.php">Jeanne-Marie Desmares</a></h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.php">Home</a></li>
+					<li>
+						<a href="index.php?action=portfolio">Les Oeuvres</a>
 
+						<!-- pas utile pour le moment
+						<ul>
+							<li><a href="left-sidebar.html">Left Sidebar</a></li>
+							<li><a href="right-sidebar.html">Right Sidebar</a></li>
+							<li><a href="no-sidebar.html">No Sidebar</a></li>
+							<li>
+								<a href="#">Submenu</a>
+								<ul>
+									<li><a href="#">Option 1</a></li>
+									<li><a href="#">Option 2</a></li>
+									<li><a href="#">Option 3</a></li>
+									<li><a href="#">Option 4</a></li>
+								</ul>
+							</li>
+						</ul>
+						-->
+
+					</li>
+					<li><a href="index.php?action=about">L'Artiste</a></li>
+					<li><a href="index.php?action=blog">Blog</a></li>
+					<li><a href="index.php?action=contact">Contact</a></li>
+
+					<!-- PAS UTILE POUR LE MOMENT
+					<li><a href="#" class="button alt">Contact</a></li>
+					-->
+				</ul>
+			</nav>
+		</div>
 
 			{% block main %}
 			    
@@ -28,9 +65,64 @@
 			
 
 		<!-- Footer -->
-			{% block footer %}
-			    
-			{% endblock footer%}
+		<div id="footer">
+			<div class="container">
+				<div class="row 200% uniform">
+					<section class="4u 12u$(medium) 12u$(small)">
+						<header class="major">
+							<h3>MENU</h3>
+						</header>
+						<p>Adipiscing orci felis. Blandit metus morbi. Adipiscing amet vis blandit. Vestibulum id ac enim nascetur ante adipiscing. Col vestibulum ac fusce lacinia nisi ante adipiscing amet ante tempus at faucibus. Adipiscing ante arcu nullam amet ante ac semper accumsan. Lacinia non integer ac praesent mi porttitor adipiscing vitae id praesent.</p>
+						<ul class="actions">
+							<li><a href="#" class="button alt">Learn more</a></li>
+						</ul>
+					</section>
+
+					<section class="4u 6u(medium) 12u$(small)">
+						
+						<!-- Pas dynamique pour le moment
+						<header class="major">
+							<h3>Recent News</h3>
+						</header>
+						<ul class="updates">
+
+							<?php include 'footerContent.php' ?>
+												
+						</ul> -->
+					</section>  
+					<section class="4u$ 6u$(medium) 12u$(small)">
+						<header class="major">
+							<h3>Contact</h3>
+						</header>
+						<ul class="labeled-icons">
+							<li>
+								<h4 class="icon fa-envelope"><span class="label">Email</span></h4>
+								<a href="#">someone@untitled.tld</a>
+							</li>
+							<li>
+								<h4 class="icon fa-phone"><span class="label">Phone</span></h4>
+								(000) 000-0000 x12345
+							</li>
+							<li>
+								<h4 class="icon fa-home"><span class="label">Address</span></h4>
+								1234 Somewhere Road, Suite #543<br>Nashville, TN 00000
+							</li>
+							<li>
+								<h4 class="icon fa-twitter"><span class="label">Twitter</span></h4>
+								<a href="#">twitter.com/untitled</a>
+							</li>
+							<li>
+								<h4 class="icon fa-facebook"><span class="label">Facebook</span></h4>
+								<a href="#">facebook.com/untitled</a>
+							</li>
+						</ul>
+					</section>
+				</div>
+			</div>
+			<div class="copyright">
+				&copy; Untitled. All rights reserved.
+			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -41,6 +133,10 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+
+			{% block script %}
+			    
+			{% endblock script %}
 
 	</body>
 </html>
