Clean the templates and add correct link on the home page

--- a/src/views/homeTemplate.twig
+++ b/src/views/homeTemplate.twig
@@ -16,9 +16,9 @@
 		<p>Artiste Peintre</p>
 		<nav id="nav">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.php">Home</a></li>
 				<li>
-					<a href="#">Les Oeuvres</a>
+					<a href="index.php?action=portfolio">Les Oeuvres</a>
 					<!-- PAS UTILE POUR LE MOMENT
 					<ul>
 						<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -35,9 +35,9 @@
 						</li>
 					</ul> -->
 				</li>
-				<li><a href="#">L'Artiste</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="index.php?action=about">L'Artiste</a></li>
+				<li><a href="index.php?action=blog">Blog</a></li>
+				<li><a href="index.php?action=contact">Contact</a></li>
 				<!-- PAS UTILE POUR LE MOMENT
 				<li><a href="#" class="button alt">Contact</a></li> -->
 			</ul>
