--- a/src/views/frontendLayout.twig
+++ b/src/views/frontendLayout.twig
@@ -7,15 +7,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 			<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 
-		{% block head %}
-		    
-		{% endblock head %}
+		
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
-			<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->	
-		
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-			<!-- AJOUTER UNE META "DESCRIPTION" -->
+		{% block head %} {% endblock head %}
+
+		<!-- AJOUTER UNE META "DESCRIPTION" -->
 	</head>
 
 	<body>
