--- a/src/views/frontendLayout.twig
+++ b/src/views/frontendLayout.twig
@@ -6,8 +6,6 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 			<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-
-		
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -49,7 +47,7 @@
 					</li>
 					<li><a href="index.php?action=about">L'Artiste</a></li>
 					<li><a href="index.php?action=blog">Blog</a></li>
-					<li><a href="index.php?action=contact">Contact</a></li>
+					<li><a href="index.php?action=about#contact">Contact</a></li>
 
 					<!-- PAS UTILE POUR LE MOMENT
 					<li><a href="#" class="button alt">Contact</a></li>
