--- a/src/views/homeTemplate.twig
+++ b/src/views/homeTemplate.twig
@@ -37,7 +37,7 @@
 				</li>
 				<li><a href="index.php?action=about">L'Artiste</a></li>
 				<li><a href="index.php?action=blog">Blog</a></li>
-				<li><a href="index.php?action=contact">Contact</a></li>
+				<li><a href="index.php?action=about#contact">Contact</a></li>
 				<!-- PAS UTILE POUR LE MOMENT
 				<li><a href="#" class="button alt">Contact</a></li> -->
 			</ul>
