update controller, manager and layouts to functionality : modify painting

--- a/src/views/backoffice/contentAdminPaintings.twig
+++ b/src/views/backoffice/contentAdminPaintings.twig
@@ -53,7 +53,7 @@
 					</div>
 
 					<div id="actions">	
-						<button>Modifier</button>
+						<a href="index.php?action=modifyPainting&amp;id={{ painting.id }}"><button>Modifier</button></a>
 						<button>Publier</button>
 						<button>Supprimer</button>
 					</div>	
