--- a/src/views/backoffice/LayoutBackoffice.twig
+++ b/src/views/backoffice/LayoutBackoffice.twig
@@ -47,8 +47,8 @@
 						<section id="sidebar">
 							<section>
 								<h3>MENU</h3>
-								<p style="color: orange; font-weight: bold">Faire une feuille de style et enlever les points de la liste (list-style: none et text decoration : none pour les liens.). Idéalement ajouter un id #menu-sidebar à la section et lui attribuer le style</p>
-								<nav id="nav">
+								
+								<nav id="nav" class=" sidebar-menu">
 									<ul>
 										<li><a href="index.php?action=mainAdmin" class="icon fa-home">Accueil</a></li>
 										<li><a href="index.php?action=adminPaintings">Mes Oeuvres</a></li>
