--- a/src/views/backoffice/contentAdminPaintings.twig
+++ b/src/views/backoffice/contentAdminPaintings.twig
@@ -2,6 +2,34 @@
 
 
 {% block content %}
+	<section>
+		<div id="pagination">
+			<div>
+				<a href="index.php?action=adminPaintings&amp;page=1"><i class="fa fa-angle-double-left">
+				</i></a>
+			</div>
+				
+			<div>
+				<a href="index.php?action=adminPaintings&amp;page={% if pageNumber == 1 %} {{pageNumber}} {% else %}  {{pageNumber - 1}} {% endif %}"><i class="fa fa-angle-left">
+				</i></a>
+			</div>
+
+			<div>
+				<p> {{ pageNumber }}/{{ numberOfPages }} </p>
+			</div>
+			
+			<div>
+				<a href="index.php?action=adminPaintings&amp;page={% if pageNumber == numberOfPages %} {{pageNumber}} {% else %}  {{pageNumber + 1}} {% endif %}"><i class="fa fa-angle-right">
+				</i></a>
+			</div>
+
+			<div>
+				<a href="index.php?action=adminPaintings&amp;page={{ numberOfPages }}"><i class="fa fa-angle-double-right"></i></a>
+				</i>
+			</div>
+
+		</div>
+	</section>
 
 	<div class="box alt">
 		<div class="row paintings-card">
