modify some views for better display

--- a/src/views/backoffice/contentAddPainting.twig
+++ b/src/views/backoffice/contentAddPainting.twig
@@ -42,20 +42,20 @@
 
 			<div>
 				<label for="sold">Le tableau est-il vendu ?
-					<input type="radio" name="sold" value="true" id="sold-true">
+					<input type="radio" name="sold" value="1" id="sold-true">
 					<label for="sold-true">OUI</label>
 
-					<input type="radio" name="sold" value="false" id="sold-false">
+					<input type="radio" name="sold" value="0" id="sold-false">
 					<label for="sold-false">NON</label>	
 				</label>
 			</div>
 
 			<div>
 				<label for="published">Voulez le rendre public ?
-					<input type="radio" name="published" value="true" id="published-true">
+					<input type="radio" name="published" value="1" id="published-true">
 					<label for="published-true">OUI</label>
 
-					<input type="radio" name="published" value="false" id="published-false">
+					<input type="radio" name="published" value="0" id="published-false">
 					<label for="published-false">NON</label>	
 				</label>
 			</div>
