--- a/src/views/portfolioTemplate.twig
+++ b/src/views/portfolioTemplate.twig
@@ -1,4 +1,4 @@
-{% extends 'frontendLayout.Twig' %}
+{% extends 'frontendLayout.twig' %}
 
 {% block title %}
 
@@ -8,8 +8,8 @@
 
 {% block head %}
 
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="assets/css/portfolio.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+	<link rel="stylesheet" href="assets/css/portfolio.css"/>
     
 {% endblock head %}
 
