--- a/src/views/frontendLayout.twig
+++ b/src/views/frontendLayout.twig
@@ -1,118 +1,120 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>{% block title %} JMD {% endblock title%}</title>
-		<meta charset="utf-8">
+    <head>
+        <title>{% block title %} JMD {% endblock title%}</title>
+        <meta charset="utf-8">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-			<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+            <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-		{% block head %} {% endblock head %}
+        {% block head %} {% endblock head %}
 
-		<!-- AJOUTER UNE META "DESCRIPTION" -->
-	</head>
+        <!-- AJOUTER UNE META "DESCRIPTION" -->
+    </head>
 
-	<body>
+    <body>
 
-		<!-- Header -->
+        <!-- Header -->
 
-		<div id="header">
-			<h1 id="logo"><a href="index.php">Jeanne-Marie Desmares</a></h1>
-			<nav id="nav">
-				<ul>
-					<li><a href="index.php">Home</a></li>
-					<li>
-						<a href="index.php?action=portfolio">Les Oeuvres</a>
+        <div id="header">
+            <h1 id="logo"><a href="index.php">Jeanne-Marie Desmares</a></h1>
+            <nav id="nav">
+                <ul>
+                    <li><a href="index.php">Home</a></li>
+                    <li>
+                        <a href="index.php?action=portfolio">Les Oeuvres</a>
 
-					</li>
-					<li><a href="index.php?action=about">L'Artiste</a></li>
-					<li><a href="index.php?action=blog">Blog</a></li>
-					<li><a href="index.php?action=about#contact">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
+                    </li>
+                    <li><a href="index.php?action=about">L'Artiste</a></li>
+                    <li><a href="index.php?action=blog">Blog</a></li>
+                    <li><a href="index.php?action=about#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
 
-			{% block main %}
-			    
-			{% endblock main%}
-			
+            {% block main %}
+                
+            {% endblock main%}
+            
 
-		<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<div class="row 200% uniform">
-					<section class="4u 12u$(medium) 12u$(small)">
-						<header class="major">
-							<h3>MENU</h3>
-						</header>
-						<p>Adipiscing orci felis. Blandit metus morbi. Adipiscing amet vis blandit. Vestibulum id ac enim nascetur ante adipiscing. Col vestibulum ac fusce lacinia nisi ante adipiscing amet ante tempus at faucibus. Adipiscing ante arcu nullam amet ante ac semper accumsan. Lacinia non integer ac praesent mi porttitor adipiscing vitae id praesent.</p>
-						<ul class="actions">
-							<li><a href="#" class="button alt">Learn more</a></li>
-						</ul>
-					</section>
+        <!-- Footer -->
+        <div id="footer">
+            <div class="container">
+                <div class="row 200% uniform">
+                    <section class="4u 12u$(medium) 12u$(small)">
+                        <header class="major">
+                            <h3>MENU</h3>
+                        </header>
+                        <p>Adipiscing orci felis. Blandit metus morbi. Adipiscing amet vis blandit. Vestibulum id ac enim nascetur ante adipiscing. Col vestibulum ac fusce lacinia nisi ante adipiscing amet ante tempus at faucibus. Adipiscing ante arcu nullam amet ante ac semper accumsan. Lacinia non integer ac praesent mi porttitor adipiscing vitae id praesent.</p>
+                        <ul class="actions">
+                            <li><a href="#" class="button alt">Learn more</a></li>
+                        </ul>
+                    </section>
 
-					<section class="4u 6u(medium) 12u$(small)">
-						
-						<!-- Pas dynamique pour le moment
-						<header class="major">
-							<h3>Recent News</h3>
-						</header>
-						<ul class="updates">
+                    <section class="4u 6u(medium) 12u$(small)">
+                        
+                        <!-- Pas dynamique pour le moment
+                        <header class="major">
+                            <h3>Recent News</h3>
+                        </header>
+                        <ul class="updates">
 
-							<?php include 'footerContent.php' ?>
-												
-						</ul> -->
-					</section>  
-					<section class="4u$ 6u$(medium) 12u$(small)">
-						<header class="major">
-							<h3>Contact</h3>
-						</header>
-						<ul class="labeled-icons">
-							<li>
-								<h4 class="icon fa-envelope"><span class="label">Email</span></h4>
-								<a href="#">someone@untitled.tld</a>
-							</li>
-							<li>
-								<h4 class="icon fa-phone"><span class="label">Phone</span></h4>
-								(000) 000-0000 x12345
-							</li>
-							<li>
-								<h4 class="icon fa-home"><span class="label">Address</span></h4>
-								1234 Somewhere Road, Suite #543<br>Nashville, TN 00000
-							</li>
-							<li>
-								<h4 class="icon fa-twitter"><span class="label">Twitter</span></h4>
-								<a href="#">twitter.com/untitled</a>
-							</li>
-							<li>
-								<h4 class="icon fa-facebook"><span class="label">Facebook</span></h4>
-								<a href="#">facebook.com/untitled</a>
-							</li>
-						</ul>
-					</section>
-				</div>
-			</div>
-			<div class="copyright">
-				&copy; Untitled. All rights reserved.
-			</div>
-		</div>
+                            <?php include 'footerContent.php' ?>
+                                                
+                        </ul> -->
+                    </section>  
+                    <section class="4u$ 6u$(medium) 12u$(small)">
+                        <header class="major">
+                            <h3>Contact</h3>
+                        </header>
+                        <ul class="labeled-icons">
+                            <li>
+                                <h4 class="icon fa-envelope"><span class="label">Email</span></h4>
+                                <a href="#">someone@untitled.tld</a>
+                            </li>
+                            <li>
+                                <h4 class="icon fa-phone"><span class="label">Phone</span></h4>
+                                (000) 000-0000 x12345
+                            </li>
+                            <li>
+                                <h4 class="icon fa-home"><span class="label">Address</span></h4>
+                                1234 Somewhere Road, Suite #543<br>Nashville, TN 00000
+                            </li>
+                            <li>
+                                <h4 class="icon fa-twitter"><span class="label">Twitter</span></h4>
+                                <a href="#">twitter.com/untitled</a>
+                            </li>
+                            <li>
+                                <h4 class="icon fa-facebook"><span class="label">Facebook</span></h4>
+                                <a href="#">facebook.com/untitled</a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+            <div class="copyright">
+                &copy; Untitled. All rights reserved.
+            </div>
+        </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.onvisible.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+        <!-- Scripts -->
+            <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/skel.min.js"></script>
+            <script src="assets/js/jquery.dropotron.min.js"></script>
+            <script src="assets/js/jquery.onvisible.min.js"></script>
+            <script src="assets/js/jquery.poptrox.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+            <script src="assets/js/main.js"></script>
 
-			{% block script %}
-			    
-			{% endblock script %}
+        
 
-	</body>
+            {% block script %}
+                
+            {% endblock script %}
+
+    </body>
 </html>
