--- a/src/views/homeTemplate.twig
+++ b/src/views/homeTemplate.twig
@@ -7,6 +7,10 @@
     
 {% endblock title%}
 
+{% block head %}
+    <meta name="description" content="Accueil du site de l'artiste peintre Jeanne-Marie Desmares. Découvrez sa peinture et son environnement, la Corse." />
+{% endblock %}
+
 
 {% block main %}
     
@@ -19,27 +23,10 @@
 				<li><a href="index.php">Home</a></li>
 				<li>
 					<a href="index.php?action=portfolio">Les Oeuvres</a>
-					<!-- PAS UTILE POUR LE MOMENT
-					<ul>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
-						<li>
-							<a href="#">Submenu</a>
-							<ul>
-								<li><a href="#">Option 1</a></li>
-								<li><a href="#">Option 2</a></li>
-								<li><a href="#">Option 3</a></li>
-								<li><a href="#">Option 4</a></li>
-							</ul>
-						</li>
-					</ul> -->
 				</li>
 				<li><a href="index.php?action=about">L'Artiste</a></li>
 				<li><a href="index.php?action=blog">Blog</a></li>
 				<li><a href="index.php?action=about#contact">Contact</a></li>
-				<!-- PAS UTILE POUR LE MOMENT
-				<li><a href="#" class="button alt">Contact</a></li> -->
 			</ul>
 		</nav>
 	</div>
@@ -47,11 +34,8 @@
 <!-- Banner -->
 	<section id="banner">
 		<h2>La peinture est la matière <br> La Corse l'inspiration</h2>
-		<!-- <p>Bienvenue dans l'univers envoutant<br />
-		d'une peintre passionnée.</p>
-		<ul class="actions"> A VOIR --> 
-			<li><a href="#" class="button special">En savoir plus...</a></li>
-		</ul>
+		<a href="index.php?action=about" class="button special">En savoir plus...</a>
+		
 	</section>
 
 <!-- One -->
@@ -64,14 +48,14 @@
 							<h2>L'Artiste</h2>
 							<p>"La peinture est un exutoire, une passion"</p>
 						</header>
-						<p class="texte-noir">Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quisgravida id, est. Sed lectuisto. Praesent lorem ipsum dolor sit amet blandit elementum hendrerit dolor sit amet feugiat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing.</p>
+						<p class="texte-noir">Il n'y a pas de plus belle expression que cette peinture riche, onctueuse et lumineuse. Elle est la porte entre mon univers intime, secret et le monde exterieur. La peinture est une réalisation technique mais surtout une oeuvre de création personnelle et unique, c'est ce qui la rend magique.</p>
 						<ul class="actions">
-							<li><a href="#" class="button alt">Lire</a></li>
+							<li><a href="index.php?action=about" class="button alt">Lire</a></li>
 						</ul>
 					</div>
 					<div class="4u$ 12u$(medium) important(medium)">
 						<span class="image fit rounded">
-							<img src="assets/img/paint-brushes-2.jpg" alt="" />
+							<img src="assets/img/portrait02.jpg" alt="Jeanne-Marie, artiste peintre" />
 						</span>
 					</div>
 				</div>
@@ -80,7 +64,7 @@
 				<div class="row 200%">
 					<div class="4u 12u$(medium)">
 						<span class="image fit rounded">
-							<img src="assets/img/corse-1.jpg" alt="" class="rounded" />
+							<img src="assets/img/corse-1.jpg" alt="Saint-Florent, Corse" class="rounded" />
 						</span>
 					</div>
 					<div class="8u$ 12u$(medium)">
@@ -88,9 +72,9 @@
 							<h2>Où la trouver</h2>
 							<p>Saint Florent / Haute-Corse</p>
 						</header>
-						<p class="texte-noir">Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quisgravida id, est. Sed lectuisto. Praesent lorem ipsum dolor sit amet blandit elementum hendrerit dolor sit amet feugiat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero faucibus.</p>
+						<p class="texte-noir">Jeanne-Marie réside en Corse, à Saint-Florent précisément. Au bord de l'eau, au pied des montagnes, c'est cet environnement maginifique qui emplit son inspiration. Cette île si belle ne cesse de se renouveller au fil des saisons, des moments de la journée. Les couchers de soleil, les villages, l'hiver, les placettes, la montagne forment des combinaisons infinies de tableaux, par ses lumieres et ses couleurs. La Corse est un cadeau pour l'artsite et elle le lui rend bien.  </p>
 						<ul class="actions">
-							<li><a href="#" class="button alt">Plus d'infos</a></li>
+							<li><a href="index.php?action=about#atelier" class="button alt">Plus d'infos</a></li>
 						</ul>
 					</div>
 				</div>
@@ -103,7 +87,6 @@
 		<div class="container">
 			<header class="major">
 				<h2>Les Créations récentes</h2>
-				<!-- <p>Découvrez les oeuvres de Jeanne-Marie Desmares</p> -->
 			</header>
 		</div>
 		<section class="carousel">
@@ -112,41 +95,11 @@
 
 			{% endblock caroussel %} 
 			    
-			<!-- REMPLACER PAR LE BLOC TWIG
-			<article>
-				<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article>
-			<article>
-				<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" title="Lorem ipsum dolor sit amet" /></a>
-			</article> -->
+			
 		</section>
 		<div class="container">
 			<ul class="actions align-center">
-				<li><a href="#" class="button alt">En voir plus...</a></li>
+				<li><a href="index.php?action=portfolio" class="button alt">En voir plus...</a></li>
 			</ul>
 		</div>
 	</section>
@@ -156,51 +109,48 @@
 		<div class="container">
 			<header class="major">
 				<h2>Accès rapide</h2>
-				<!-- <p>Convallis amet volutpat et aliquam</p> -->
 			</header>
 			<div class="icon-grid">
 				<div class="row uniform 150%">
 					<section class="3u 6u(large) 12u$(small)">
-						<i class="icon fa-university"></i>
-						<h3>Gallerie</h3>
-						<p>Découvrez en images les huiles et aquarelles réalisées par Jeanne-Marie Desmares.</p>
+						<div class="acces">
+						<a href="index.php?action=portfolio" class="acces-rapide">
+							<i class="icon fa-university"></i>
+							<h3>Gallerie</h3>
+							<p>Découvrez en images les huiles et aquarelles réalisées par Jeanne-Marie Desmares.</p>
+						</a>
+					</div>
 					</section>
 					<section class="3u 6u$(large) 12u$(small)">
-						<i class="icon fa-anchor"></i>
-						<h3>L'atelier de Jeanne-Marie Desmares</h3>
-						<p>Trouver et rencontrer l'artiste grâce au 
+						<div class="acces">
+						<a href="index.php?action=about#atelier" class="acces-rapide">
+							<i class="icon fa-anchor"></i>
+							<h3>L'atelier de Jeanne-Marie Desmares</h3>
+							<p>Trouver et rencontrer l'artiste grâce au 
 						plan du village de Saint Florent (Haute-Corse).</p>
+						</a>
+					</div>
 					</section>
 					<section class="3u 6u(large) 12u$(small)">
-						<i class="icon fa-bullhorn"></i>
-						<h3>Blog</h3>
-						<p>A travers ce blog, le peintre nous raconte ses ballades, son histoire et sa peinture.</p>
+						<div class="acces">
+						<a href="index.php?action=blog" class="acces-rapide">
+							<i class="icon fa-bullhorn"></i>
+							<h3>Blog</h3>
+							<p>A travers ce blog, le peintre nous raconte ses ballades, son histoire et sa peinture.</p>
+						</a></div>
 					</section>
 					<section class="3u$ 6u$(large) 12u$(small)">
-						<i class="icon fa-envelope"></i>
-						<h3>Envoyer un mail</h3>
-						<p>Contacter l'artiste, poser vos questions, prendre rendez-vous, n'hésitez pas à envoyer un mail.</p>
+						<div class="acces">
+						<a href="index.php?action=about#contact" class="acces-rapide">
+							<i class="icon fa-envelope"></i>
+							<h3>Envoyer un mail</h3>
+							<p>Contacter l'artiste, poser vos questions, prendre rendez-vous, n'hésitez pas à envoyer un mail.</p>
+						</a>
+					</div>
 					</section>
 				</div>
 			</div>
 		</div>
 	</section>
 
-<!-- Four -->
-	<!-- PAS UTILE POUR LE MOMENT
-	<section id="four" class="wrapper style1 special">
-		<div class="container">
-			<header class="major">
-				<h2>Vitae sed luctus magna</h2>
-				<p>Metus ante semper lorem ipsum dolor</p>
-			</header>
-			<ul class="actions">
-				<li><a href="#" class="button special">Amet magna</a></li>
-				<li><a href="#" class="button alt">Learn more</a></li>
-			</ul>
-		</div>
-	</section> -->
-
 {% endblock main%}
-	
-  
