Last changes on the Portfolio part

--- a/src/views/backoffice/contentModifyPainting.twig
+++ b/src/views/backoffice/contentModifyPainting.twig
@@ -40,8 +40,9 @@
 			    
 			<select name="category" class="painting-fields">
 					<option value="paysage">Paysage</option>
-					<option value="scene">Scene</option>
+					<option value="scene">Scène</option>
 					<option value="abstrait">Abstrait</option>
+					<option value="nature-morte">Nature Morte</option>
 			</select>	
 			
 			{% endif %}
