--- a/src/views/frontendLayout.twig
+++ b/src/views/frontendLayout.twig
@@ -5,13 +5,12 @@
         <meta charset="utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-            <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
         <link rel="stylesheet" href="assets/css/main.css" />
         <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
         {% block head %} {% endblock head %}
 
-        <!-- AJOUTER UNE META "DESCRIPTION" -->
     </head>
 
     <body>
@@ -22,14 +21,21 @@
             <h1 id="logo"><a href="index.php">Jeanne-Marie Desmares</a></h1>
             <nav id="nav">
                 <ul>
-                    <li><a href="index.php">Home</a></li>
+                    <li>
+                        <a href="index.php">Home</a>
+                    </li>
                     <li>
                         <a href="index.php?action=portfolio">Les Oeuvres</a>
-
                     </li>
-                    <li><a href="index.php?action=about">L'Artiste</a></li>
-                    <li><a href="index.php?action=blog">Blog</a></li>
-                    <li><a href="index.php?action=about#contact">Contact</a></li>
+                    <li>
+                        <a href="index.php?action=about">L'Artiste</a>
+                    </li>
+                    <li>
+                        <a href="index.php?action=blog">Blog</a>
+                    </li>
+                    <li>
+                        <a href="index.php?action=about#contact">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
